Move all examples to a single Django project
